admin page con controlli fatto

--- a/Angular-Front/src/app/AziendaEnviroments/azienda/azienda.component.html
+++ b/Angular-Front/src/app/AziendaEnviroments/azienda/azienda.component.html
@@ -244,5 +244,16 @@
         Aggiungi Azienda
       </button>
     </div>
+    <div
+      class="container d-flex align-items-center justify-content-center mt-5"
+    >
+      <button
+        class="btn btn-primary w-50 p-2"
+        routerLink="/admin"
+        *ngIf="permissions"
+      >
+        admin-panel-test-button
+      </button>
+    </div>
   </section>
 </div>
