--- a/Angular-Front/src/app/AziendaEnviroments/azienda/azienda.component.html
+++ b/Angular-Front/src/app/AziendaEnviroments/azienda/azienda.component.html
@@ -42,111 +42,98 @@
     </div>
 
     <!-- SearchBar Dipendente-->
+    
+    <ng-template #ModalDipendenti let-modal>
 
-    <ng-template #ModalDipendenti>
+      <div class="modal-header">
 
-      <!-- <div class="modal-dialog"> -->
+        <nav class="navbar container bg-light my-5 rounded-2" *ngIf="dipendentidisplay">
+  
+          <a class="navbar-brand">Cerca Dipendente</a>
 
-        <!-- <div class="modal-content"> -->
+          <form class="d-flex" role="search">
 
-          <div class="modal-header">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Inizia a digitare..."
+              aria-label="Cerca dipendente per nome"
+              #valoreDipendente
+              (input)="searchDipendente(valoreDipendente)"
+            />
 
-            <h5 class="modal-title" id="exampleModalLabel">Dipendenti</h5>
-
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <button class="btn btn-outline-dark" (click)="searchDipendente(valoreDipendente)">
+              Cerca!
             </button>
 
-          </div>
-
-          <div class="modal-body">
-
-            <nav class="navbar container bg-light my-5 rounded-2" *ngIf="dipendentidisplay">
-      
-              <a class="navbar-brand">Cerca Dipendente</a>
-    
-              <form class="d-flex" role="search">
-    
-                <input
-                  class="form-control me-2"
-                  type="search"
-                  placeholder="Inizia a digitare..."
-                  aria-label="Cerca dipendente per nome"
-                  #valoreDipendente
-                  (input)="searchDipendente(valoreDipendente)"
-                />
-    
-                <button class="btn btn-outline-dark" (click)="searchDipendente(valoreDipendente)">
-                  Cerca!
-                </button>
-    
-              </form>
-      
-            </nav>
-      
-            <!-- Search Results Dipendente -->
-      
-            <div class="container p-3 mb-5 alert alert-warning alert-dismissible fade show" *ngIf="errore" role="alert">
-      
-              <strong>Attenzione!</strong> La ricerca non ha prodotto risultati.
-              <button type="button" class="btn-close" data-bs-dismiss="alert" (click)="chiudi()">
-              </button>
-      
-            </div>
-      
-            <div *ngIf="is_display">
-      
-              <h2 class="text-dark">Dipendenti</h2>
-      
-              <div>
-      
-                <table class="table">
-      
-                  <thead class="bg-dark text-white">
-      
-                    <tr>
-                      <th scope="col">Cognome dipendente</th>
-                      <th scope="col">Nome dipendente</th>
-                      <th scope="col">Matricola</th>
-                      <th scope="col">Contratto</th>
-                      <th scope="col">Assunzione</th>
-                    </tr>
-      
-                  </thead>
-      
-                  <tbody>
-      
-                    <tr style="cursor: pointer" *ngFor="let d of dipendente$ | async" routerLink="aziendaDetails/{{ d.id_azienda }}">
-      
-                      <th>{{ d.cognome }}</th>
-                      <td>{{ d.nome }}</td>
-                      <td>{{ d.matricola }}</td>
-                      <td>{{ d.nome_tipo_contratto }}</td>
-                      <td>{{ d.data_inizio_rapporto }}</td>
-      
-                    </tr>
-      
-                  </tbody>
-      
-                </table>
-      
-                <br/>
-      
-              </div>
-      
-            </div>
-
-          </div>
-          
-          <div class="modal-footer">
-
-            <button type="button" class="btn btn-secondary" data-dismiss="modal-close">Close</button>
-
-          </div>
-
-        <!-- </div> -->
-
-      <!-- </div> -->
+          </form>
   
+        </nav>
+
+      </div>
+
+      <div class="modal-body">
+  
+        <!-- Search Results Dipendente -->
+  
+        <div class="container p-3 mb-5 alert alert-warning alert-dismissible fade show" *ngIf="errore" role="alert">
+  
+          <strong>Attenzione!</strong> La ricerca non ha prodotto risultati.
+          <button type="button" class="btn-close" data-bs-dismiss="alert" (click)="chiudi()">
+          </button>
+  
+        </div>
+  
+        <div *ngIf="is_display">
+  
+          <h2 class="text-dark">Dipendenti</h2>
+  
+          <div>
+  
+            <table class="table">
+  
+              <thead class="bg-dark text-white">
+  
+                <tr>
+                  <th scope="col">Cognome dipendente</th>
+                  <th scope="col">Nome dipendente</th>
+                  <th scope="col">Matricola</th>
+                  <th scope="col">Contratto</th>
+                  <th scope="col">Assunzione</th>
+                </tr>
+  
+              </thead>
+  
+              <tbody>
+  
+                <tr (click) = "modal.close()" style="cursor: pointer" *ngFor="let d of dipendente$ | async" routerLink="aziendaDetails/{{ d.id_azienda }}">
+  
+                  <th>{{ d.cognome }}</th>
+                  <td>{{ d.nome }}</td>
+                  <td>{{ d.matricola }}</td>
+                  <td>{{ d.nome_tipo_contratto }}</td>
+                  <td>{{ d.data_inizio_rapporto }}</td>
+  
+                </tr>
+  
+              </tbody>
+  
+            </table>
+  
+            <br/>
+  
+          </div>
+  
+        </div>
+
+      </div>
+      
+      <div class="modal-footer">
+
+        <button type="button" class="btn btn-secondary" (click) = 'modal.close()'> Close</button>
+
+      </div>
+
     </ng-template>
 
     <!-- SearchBar Clienti -->
