--- a/Angular-Front/src/app/AziendaEnviroments/azienda/azienda.component.html
+++ b/Angular-Front/src/app/AziendaEnviroments/azienda/azienda.component.html
@@ -32,7 +32,7 @@
           <input class="bigger-dot" type="button" name="search" (click)="openModal(ModalDipendenti)">
           <label> Dipendenti</label>
           <br>
-          <input class="bigger-dot" type="button" name="search" (click)="showClienti()">
+          <input class="bigger-dot" type="button" name="search" (click)="openModal(ModalClienti)">
           <label> Clienti</label>
 
         </div>
@@ -42,13 +42,13 @@
     </div>
 
     <!-- SearchBar Dipendente-->
-    
+
     <ng-template #ModalDipendenti let-modal>
 
       <div class="modal-header">
 
-        <nav class="navbar container bg-light my-5 rounded-2" *ngIf="dipendentidisplay">
-  
+        <nav class="navbar container bg-light rounded-2">
+
           <a class="navbar-brand">Cerca Dipendente</a>
 
           <form class="d-flex" role="search">
@@ -62,38 +62,34 @@
               (input)="searchDipendente(valoreDipendente)"
             />
 
-            <button class="btn btn-outline-dark" (click)="searchDipendente(valoreDipendente)">
-              Cerca!
-            </button>
-
           </form>
-  
+
         </nav>
 
       </div>
 
       <div class="modal-body">
-  
+
         <!-- Search Results Dipendente -->
-  
+
         <div class="container p-3 mb-5 alert alert-warning alert-dismissible fade show" *ngIf="errore" role="alert">
-  
+
           <strong>Attenzione!</strong> La ricerca non ha prodotto risultati.
           <button type="button" class="btn-close" data-bs-dismiss="alert" (click)="chiudi()">
           </button>
-  
+
         </div>
-  
+
         <div *ngIf="is_display">
-  
+
           <h2 class="text-dark">Dipendenti</h2>
-  
+
           <div>
-  
+
             <table class="table">
-  
+
               <thead class="bg-dark text-white">
-  
+
                 <tr>
                   <th scope="col">Cognome dipendente</th>
                   <th scope="col">Nome dipendente</th>
@@ -101,33 +97,33 @@
                   <th scope="col">Contratto</th>
                   <th scope="col">Assunzione</th>
                 </tr>
-  
+
               </thead>
-  
+
               <tbody>
-  
+
                 <tr (click) = "modal.close()" style="cursor: pointer" *ngFor="let d of dipendente$ | async" routerLink="aziendaDetails/{{ d.id_azienda }}">
-  
+
                   <th>{{ d.cognome }}</th>
                   <td>{{ d.nome }}</td>
                   <td>{{ d.matricola }}</td>
                   <td>{{ d.nome_tipo_contratto }}</td>
                   <td>{{ d.data_inizio_rapporto }}</td>
-  
+
                 </tr>
-  
+
               </tbody>
-  
+
             </table>
-  
+
             <br/>
-  
+
           </div>
-  
+
         </div>
 
       </div>
-      
+
       <div class="modal-footer">
 
         <button type="button" class="btn btn-secondary" (click) = 'modal.close()'> Close</button>
@@ -138,84 +134,91 @@
 
     <!-- SearchBar Clienti -->
 
-    <nav class="navbar bg-light my-5 rounded-2" *ngIf="clientidisplay">
+    <ng-template #ModalClienti let-modal>
 
-      <div class="container-fluid">
+      <div class="modal-header">
 
-        <a class="navbar-brand">Cerca Cliente</a>
+        <nav class="navbar bg-light container rounded-2">
 
-        <form class="d-flex" role="search">
+            <a class="navbar-brand">Cerca Cliente</a>
 
-          <input
-            class="form-control me-2"
-            type="search"
-            placeholder="Inizia a digitare..."
-            aria-label="Cerca cliente"
-            #valoreCliente
-            (input)="searchCliente(valoreCliente)"
-          />
+            <form class="d-flex" role="search">
 
-          <button class="btn btn-outline-dark" (click)="searchCliente(valoreCliente)">
-            Cerca!
-          </button>
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Inizia a digitare..."
+                aria-label="Cerca cliente"
+                #valoreCliente
+                (input)="searchCliente(valoreCliente)"
+              />
 
-        </form>
+            </form>
 
-      </div>
-
-    </nav>
-
-    <!-- Search Results Clienti-->
-
-    <div class="alert alert-warning alert-dismissible fade show" *ngIf="errore2" role="alert">
-
-      <strong>Attenzione!</strong> La ricerca non ha prodotto risultati.
-
-      <button type="button" class="btn-close" data-bs-dismiss="alert" (click)="chiudi()">
-      </button>
-
-    </div>
-
-    <div *ngIf="is_display2">
-
-      <h2 class="text-dark">Clienti</h2>
-
-      <div>
-
-        <table class="table">
-
-          <thead class="bg-dark text-white">
-
-            <tr>
-              <th scope="col">Nome</th>
-              <th scope="col">Partita iva</th>
-              <th scope="col">Email</th>
-              <th scope="col">Telefono</th>
-            </tr>
-
-          </thead>
-
-          <tbody>
-            
-            <tr style="cursor: pointer" *ngFor="let c of cliente$ | async" routerLink="clienteCommessa/{{ c.id_cliente }}">
-              <th>{{ c.nome }}</th>
-              <td>{{ c.p_iva }}</td>
-              <td>{{ c.email }}</td>
-              <td>{{ c.telefono }}</td>
-
-            </tr>
-
-          </tbody>
-
-        </table>
-
-        <br/>
+        </nav>
 
       </div>
 
-    </div>
+      <div class="modal-body">
+        <!-- Search Results Clienti-->
 
-  </div>
+        <div class="alert alert-warning alert-dismissible fade show" *ngIf="errore2" role="alert">
+
+          <strong>Attenzione!</strong> La ricerca non ha prodotto risultati.
+
+          <button type="button" class="btn-close" data-bs-dismiss="alert" (click)="chiudi()"></button>
+
+        </div>
+
+        <div *ngIf="is_display2">
+
+          <h2 class="text-dark">Clienti</h2>
+
+          <div>
+
+            <table class="table">
+
+              <thead class="bg-dark text-white">
+
+                <tr>
+                  <th scope="col">Nome</th>
+                  <th scope="col">Partita iva</th>
+                  <th scope="col">Email</th>
+                  <th scope="col">Telefono</th>
+                </tr>
+
+              </thead>
+
+              <tbody>
+
+                <tr (click)="modal.close()" style="cursor: pointer" *ngFor="let c of cliente$ | async" routerLink="clienteCommessa/{{ c.id_cliente }}">
+                  <th>{{ c.nome }}</th>
+                  <td>{{ c.p_iva }}</td>
+                  <td>{{ c.email }}</td>
+                  <td>{{ c.telefono }}</td>
+
+                </tr>
+
+              </tbody>
+
+            </table>
+
+            <br/>
+
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="modal-footer">
+
+        <button type="button" class="btn btn-secondary" (click) = 'modal.close()'> Close</button>
+
+      </div>
+
+    </ng-template>
+
 
   <!-- Team -->
 
@@ -266,7 +269,7 @@
                     <div class="card-body text-capitalize text-center mt-4">
 
                       <h4 class="card-title">{{ e.nome }}</h4>
-                      
+
                       <p class="card-text">
 
                         <button class="btn btn-primary" routerLink="aziendaDetails/{{ e.id_azienda }}">
