--- a/Angular-Front/src/app/DipendenteEnviroments/dipendente/dipendente.component.css
+++ b/Angular-Front/src/app/DipendenteEnviroments/dipendente/dipendente.component.css
@@ -1,19 +1,3 @@
-html,
-body,
-.intro {
-  height: 100%;
-}
-
-/* .gradient-custom-1 {
-  /* fallback for old browsers */
-  /* background: #cd9cf2; */
-
-  /* Chrome 10-25, Safari 5.1-6 */
-  /* background: -webkit-linear-gradient(to top, rgba(205, 156, 242, 1), rgba(246, 243, 255, 1)); */
-
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  /* background: linear-gradient(to top, rgba(205, 156, 242, 1), rgba(246, 243, 255, 1)) */
-/* } */
 #box{
   border: 1px solid black;
   width: 200%;
@@ -22,7 +6,7 @@ body,
 
 tbody td {
   font-weight: 500;
-  color: #999999;
+  color: black;
 }
 
 i{
@@ -30,5 +14,9 @@ i{
 }
 
 button:hover i{
+  color: white;
+}
+
+tr th{
   color: white;
 }
