--- a/Angular-Front/src/app/DipendenteEnviroments/dipendente/dipendente.component.html
+++ b/Angular-Front/src/app/DipendenteEnviroments/dipendente/dipendente.component.html
@@ -1,14 +1,17 @@
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"
-/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"/>
 
 <h2 class="text-dark">Dipendenti</h2>
+
 <div>
+
   <div id="box">
+
     <div class="bg-white">
+
       <table class="table mb-0">
-        <thead>
+
+        <thead class = "bg-primary">
+
           <tr>
             <th scope="col">ID</th>
             <th scope="col">Nome dipendente</th>
@@ -19,11 +22,15 @@
             <th scope="col">Email</th>
             <th scope="col">Telefono</th>
             <th scope="col">Data di nascita</th>
+            <th scope="col"></th>
           </tr>
+
         </thead>
+
         <tbody>
+
           <tr *ngFor="let d of dipendente$ | async">
-            <th>{{ d.id_dipendente }}</th>
+            <td style = "font-weight: 700;">{{ d.id_dipendente }}</td>
             <td>{{ d.nome }}</td>
             <td>{{ d.cognome }}</td>
             <td>{{ d.cf }}</td>
@@ -32,37 +39,37 @@
             <td>{{ d.email }}</td>
             <td>{{ d.telefono }}</td>
             <td>{{ d.data_nascita }}</td>
+
             <div class="d-flex justify-content-center">
-              <button
-              class="btn btn-outline-dark text-white m-2"
-              routerLink="/dipendenteUpdate/{{ d.id_dipendente }}"
-              *ngIf="permissions"
-              >
-              <i class="bi bi-pencil-square"></i>
-            </button>
-            <button
-              class="btn btn-outline-dark text-white m-2"
-              (click)="deleteEmployee(d.id_dipendente, idaz)"
-              *ngIf="permissions"
-            >
-              <i class="bi bi-trash"></i>
-            </button>
+
+              <button class="btn btn-outline-warning m-2" routerLink="/dipendenteUpdate/{{ d.id_dipendente }}" *ngIf="permissions" >
+                <i class="bi bi-pencil-square"></i>
+              </button>
+
+              <button class="btn btn-danger m-2" (click)="deleteEmployee(d.id_dipendente, idaz)" *ngIf="permissions" >
+                <i class="bi bi-trash"></i>
+              </button>
+
             </div>
+
           </tr>
+
         </tbody>
+
       </table>
+
     </div>
+
   </div>
-  <br />
-  <button class="btn bg-dark text-white m-2" (click)="downloadFile()">
-    CSV
+
+  <br/>
+
+  <button type="button" class="btn btn-outline-primary m-2" (click)="downloadFile()">
+    <i class="bi bi-file-earmark-arrow-down">CSV</i>
   </button>
-  <button
-    type="button"
-    class="btn btn-dark"
-    routerLink="/addDipendente/{{ idaz }}"
-    *ngIf="permissions"
-  >
-    Aggiungi
+
+  <button type="button" class="btn btn-success m-2" routerLink="/addDipendente/{{ idaz }}" *ngIf="permissions" >
+    <i class="bi bi-person-add"> Aggiungi</i>
   </button>
+
 </div>
