--- a/Angular-Front/src/app/AziendaEnviroments/azienda-details/azienda-details.component.html
+++ b/Angular-Front/src/app/AziendaEnviroments/azienda-details/azienda-details.component.html
@@ -54,11 +54,11 @@
       <i class="bi bi-pencil-square"></i>
     </button>
 
-    <button class="btn btn-dark m-2" (click)="deleteAzienda(a.id_azienda)" routerLink="/" *ngIf="permissions" >
+    <button class="btn btn-dark m-2" (click) = "openModal(reqModal)" *ngIf="permissions" >
       <i class="bi bi-trash"></i>
     </button>
 
-    <ng-template>
+    <ng-template #reqModal let-modal>
 
       <div class="modal-header">
 
@@ -74,8 +74,8 @@
 
       <div class="modal-footer">
 
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-danger">Elimina</button>
+        <button type="button" class="btn btn-secondary" (click) = "modal.close()">Close</button>
+        <button type="button" class="btn btn-danger" (click)="deleteAzienda(a.id_azienda)" (click) = "modal.close()" routerLink="/">Elimina</button>
 
       </div>
 
